Shadow overlap fix

--- a/src/components/BuildingsList/BuildingsList.scss
+++ b/src/components/BuildingsList/BuildingsList.scss
@@ -10,7 +10,7 @@ html,body{overflow-y: scroll; }
 }
 .e445_9290 { 
 	width:335px;
-	height:656px;
+	height:676px;
 	position:relative;
 	
 }
